button class change

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <hr class="my-4">
     <p>book now</p>
     <a class="btn btn-primary btn-lg" href="#" role="button">View Tables</a>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Make Reservation</a>
+    <a class="btn btn-danger btn-lg" href="#" role="button">Make Reservation</a>
   </div>
 </body>
 </html>
