linked buttons on home html to tables and res pages

--- a/html/home.html
+++ b/html/home.html
@@ -15,8 +15,8 @@
     <p class="lead">Tables are Hot! book your reservation now!</p>
     <hr class="my-4">
     <p>book now</p>
-    <a class="btn btn-info btn-lg" href="#" role="button">View Tables</a>
-    <a class="btn btn-danger btn-lg" href="#" role="button">Make Reservation</a>
+    <a class="btn btn-info btn-lg" href="tables.html" role="button">View Tables</a>
+    <a class="btn btn-danger btn-lg" href="reserve.html" role="button">Make Reservation</a>
   </div>
 </body>
 </html>
